tests/short_assign_const_bad.sl
// Verifies short assignment to existing const is rejected.
fn f() {
	const x = 1
	x := 2
}
